--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,20 @@
+# thymeleaf
 spring.thymeleaf.enabled=true
 spring.thymeleaf.cache=false
+
+# spring session
+spring.session.store-type=redis
+
+# redis
+spring.redis.host=localhost
+spring.redis.password=foobared
+spring.redis.port=6379
+
+# postgresql
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/sampledb
+spring.datasource.username=postgres
+spring.datasource.password=pass
+
+# mybatis
+mybatis.configuration.map-underscore-to-camel-case=true
